--- a/bumpdeps2/libp2p/transcoder.html
+++ b/bumpdeps2/libp2p/transcoder.html
@@ -208,11 +208,11 @@ window.addEventListener("DOMContentLoaded", main2);
       <li><a class="reference" href="#Transcoder"
     title="Transcoder = object
   stringToBuffer*: proc (s: string; vb: var VBuffer): bool {.nimcall, gcsafe,
-      noSideEffect, raises: [Defect].}
+      noSideEffect, raises: [].}
   bufferToString*: proc (vb: var VBuffer; s: var string): bool {.nimcall,
-      gcsafe, noSideEffect, raises: [Defect].}
+      gcsafe, noSideEffect, raises: [].}
   validateBuffer*: proc (vb: var VBuffer): bool {.nimcall, gcsafe, noSideEffect,
-      raises: [Defect].}">Transcoder</a></li>
+      raises: [].}">Transcoder</a></li>
 
   </ul>
 </li>
@@ -240,11 +240,11 @@ class="link-seesrc" target="_blank">Source</a>
 <div id="Transcoder" class="tohide">
 <dt><pre><a href="transcoder.html#Transcoder"><span class="Identifier">Transcoder</span></a> <span class="Other">=</span> <span class="Keyword">object</span>
   <span class="Identifier">stringToBuffer</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">vb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbuffer.html#VBuffer"><span class="Identifier">VBuffer</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span class="Identifier">nimcall</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span>
-      </span><span class="Identifier">noSideEffect</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}
+      </span><span class="Identifier">noSideEffect</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}
   <span class="Identifier">bufferToString</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">vb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbuffer.html#VBuffer"><span class="Identifier">VBuffer</span></a><span class="Other">;</span> <span class="Identifier">s</span><span class="Other">:</span> <span class="Keyword">var</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span class="Identifier">nimcall</span><span class="Other">,</span>
-      <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">noSideEffect</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}
+      <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">noSideEffect</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}
   <span class="Identifier">validateBuffer</span><span class="Operator">*</span><span class="Other">:</span> <span class="Keyword">proc</span> <span class="Other">(</span><span class="Identifier">vb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbuffer.html#VBuffer"><span class="Identifier">VBuffer</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span class="Identifier">nimcall</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> </span><span class="Identifier">noSideEffect</span><span class="Other">,</span>
-      <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">Defect</span><span class="Other">]</span></span>.}
+      <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}
 </pre></dt>
 <dd>
 
@@ -266,7 +266,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2023-05-30 09:42:26 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2023-06-07 12:18:25 UTC</small>
       </div>
     </div>
   </div>
